--- a/bermudas_masculinas.html
+++ b/bermudas_masculinas.html
@@ -6,6 +6,7 @@
   <title> Titulo da página</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -15,13 +16,16 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="img/Design sem nome (3).png" alt="Logo" width="80px"></a>
 
-       
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Home</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -35,7 +39,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_masc.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -44,12 +48,12 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camisetas-fem.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_fem.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -58,16 +62,16 @@
                 Infantil
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_infantil.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camiseta_infantil.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_inf.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Ofertas</a>
+              <a class="nav-link active" aria-current="page" href="ofertas.html"><i class="bi bi-percent"></i> Ofertas</a>
             </li>
             <li class="nav-item dropdown">
 
@@ -77,7 +81,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">🔎</button>
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
           </form>
         </div>
       </div>
@@ -95,7 +99,7 @@
     <div class="container">
       <div class="container text-center">
         <div class="row">
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card" style="width: 18rem;">
               <img src="img/bermuda1.webp" class="card-img-top" alt="...">
               <div class="card-body">
@@ -105,23 +109,23 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card" style="width: 18rem;">
               <img src="img/bermuda2.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jogger Cargo Masculina Bege</h5>
+                  Bermuda Jogger Cargo Masculina Bege</h5>
                 <p class="card-text">$89,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card" style="width: 18rem;">
               <img src="img/bermuda5.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
+                  Bermuda Jeans Elastano Masculina Preta Ref: 03</h5>
                 <p class="card-text">$100,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
@@ -130,7 +134,7 @@
 
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card padding_card" style="width: 18rem;">
               <img src="img/bermuda3.webp" class="card-img-top" alt="...">
               <div class="card-body">
@@ -141,7 +145,7 @@
             </div>
 
           </div>
-          <div class="col">
+          <div class="col mb-5 mt-5">
 
             <div class="card" style="width: 18rem;">
               <img src="img/bermuda4.webp" class="card-img-top" alt="...">
@@ -153,12 +157,12 @@
             </div>
 
           </div>
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card" style="width: 18rem;">
               <img src="img/bermuda6.webp" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Bermuda Jeans Elastano Masculina Branco</h5>
+                  Bermuda Jeans Elastano Masculina Branco</h5>
                 <p class="card-text">$100,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
