--- a/calcas_masculinas.html
+++ b/calcas_masculinas.html
@@ -6,6 +6,7 @@
   <title> Titulo da página</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -22,6 +23,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Home</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -35,7 +39,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_masc.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -44,12 +48,12 @@
                 Feminino
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camisetas-fem.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_fem.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -58,16 +62,16 @@
                 Infantil
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_infantil.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camiseta_infantil.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_inf.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Ofertas</a>
+              <a class="nav-link active" aria-current="page" href="ofertas.html"><i class="bi bi-percent"></i> Ofertas</a>
             </li>
             <li class="nav-item dropdown">
 
@@ -77,7 +81,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">🔎</button>
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
           </form>
         </div>
       </div>
