--- a/camiseta_infantil.html
+++ b/camiseta_infantil.html
@@ -6,6 +6,8 @@
   <title> Titulo da página</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 
 <body>
@@ -15,13 +17,16 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="img/Design sem nome (3).png" alt="Logo" width="80px"></a>
 
-       
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Home</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -35,7 +40,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_masc.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -45,11 +50,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="calcas_fem.html">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="camisetas-fem.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_fem.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -58,16 +63,17 @@
                 Infantil
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Calças</a></li>
-                <li><a class="dropdown-item" href="#">Camisetas</a></li>
+                <li><a class="dropdown-item" href="calcas_infantil.html">Calças</a></li>
+                <li><a class="dropdown-item" href="camiseta_infantil.html">Camisetas</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_inf.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Ofertas</a>
+              <a class="nav-link active" aria-current="page" href="ofertas.html"><i class="bi bi-percent"></i>
+                Ofertas</a>
             </li>
             <li class="nav-item dropdown">
 
@@ -77,7 +83,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">🔎</button>
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
           </form>
         </div>
       </div>
@@ -95,124 +101,134 @@
     <div class="container">
       <div class="container text-center">
         <div class="row">
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_feminina_branca_2077_1_7debc93c7560b3852794b719c07844c2.webp" class="card-img-top" alt="...">
+              <img
+                src="img/camiseta_infantil_ct_manga_curta_feminina_branca_2077_1_7debc93c7560b3852794b719c07844c2.webp"
+                class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                  Calça Jogger Infantil Masculina Bege CT</h5>
-                <p class="card-text">$74,00</p>
+                  Camiseta Infantil CT Manga Curta Feminina Branca</h5>
+                <p class="card-text">$39,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-5 mt-5">
             <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_feminina_cafe_2079_1_a46c69edc3300093218401b85bb338cf.webp" class="card-img-top" alt="...">
+              <img src="img/camiseta_infantil_ct_manga_curta_feminina_cafe_2079_1_a46c69edc3300093218401b85bb338cf.webp"
+                class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                  Calça Jogger Infantil Masculina Grafite CT</h5>
-                <p class="card-text">$74,00</p>
+                  Camiseta Infantil CT Manga Curta Feminina Café
+                </h5>
+                <p class="card-text">$39,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col mb-5 mt-5 ">
             <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_feminina_cinza_claro_2081_1_612b147f440e67c293aaa31cd7c3d3ab.webp" class="card-img-top" alt="...">
+              <img
+                src="img/camiseta_infantil_ct_manga_curta_feminina_cinza_claro_2081_1_612b147f440e67c293aaa31cd7c3d3ab.webp"
+                class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">
-                    Calça Jogger Infantil Masculina Verde Musgo CT</h5>
-                <p class="card-text">$74,00</p>
+                  Camiseta Infantil CT Manga Curta Feminina Cinza Claro</h5>
+                <p class="card-text">$39,00</p>
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
-
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_feminina_preta_2075_1_d83c4d8de5311832ddf413c540dc289b.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Bege CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="col mb-5 mt-5">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_feminina_preta_2075_1_d83c4d8de5311832ddf413c540dc289b.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Feminina Preta</h5>
+                  <p class="card-text">$39,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
-          </div>
-          <div class="col">
-
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_feminina_verde_2083_1_c1b7e1d34d153c46f9b8b0fcc5add61e.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Grafite CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="row"></div>
+            <div class="col mb mt">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_feminina_verde_2083_1_c1b7e1d34d153c46f9b8b0fcc5add61e.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Feminina Verde</h5>
+                  <p class="card-text">$39,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_masculina_branca_2065_1_1db5f1e0121ffd737bc5995b8bf34c30.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="col mb mt">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_masculina_branca_2065_1_1db5f1e0121ffd737bc5995b8bf34c30.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Masculina Branca</h5>
+                  <p class="card-text">$39,00,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_masculina_cafe_2069_1_b823eeaf5cb9cc339b4e1e178f3d0645.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="col mb mt">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_masculina_cafe_2069_1_b823eeaf5cb9cc339b4e1e178f3d0645.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Masculina Café</h5>
+                  <p class="card-text">$39,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_masculina_cinza_claro_2071_1_e53c0150020e8311d8aa874f87c85cce.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="col mb mt">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_masculina_cinza_claro_2071_1_e53c0150020e8311d8aa874f87c85cce.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Masculina Cinza Claro</h5>
+                  <p class="card-text">$39,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_masculina_preta_2067_1_bc02cd93553f6956643880c9b5b81976.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="row"></div>
+            <div class="col mb-5 mt-5">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_masculina_preta_2067_1_bc02cd93553f6956643880c9b5b81976.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Masculina Preta</h5>
+                  <p class="card-text">$39,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
-          </div>
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <img src="img/camiseta_infantil_ct_manga_curta_masculina_verde_2073_1_0a6d128369822ca773fe1b11cbd20a95.webp" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Calça Jogger Infantil Feminina Verde Musgo CT</h5>
-                <p class="card-text">$74,00</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="col mb-5 mt-5">
+              <div class="card" style="width: 18rem;">
+                <img
+                  src="img/camiseta_infantil_ct_manga_curta_masculina_verde_2073_1_0a6d128369822ca773fe1b11cbd20a95.webp"
+                  class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Camiseta Infantil CT Manga Curta Masculina Verde</h5>
+                  <p class="card-text">$39,00</p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
               </div>
             </div>
-
           </div>
-
         </div>
       </div>
-    </div>
   </main>
   <footer> Rodapé</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
