--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Style Shop</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,6 +24,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house"></i> Home</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="vertudo_masculino.html" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -64,11 +68,12 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="vertudo_masculino.html">Ver tudo</a></li>
+                <li><a class="dropdown-item" href="vertudo_inf.html">Ver tudo</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="ofertas.html">Ofertas</a>
+              <a class="nav-link active" aria-current="page" href="ofertas.html"><i class="bi bi-percent"></i>
+                Ofertas</a>
             </li>
             <li class="nav-item dropdown">
 
@@ -78,7 +83,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">🔎</button>
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
           </form>
         </div>
       </div>
@@ -97,13 +102,14 @@
         </div>
       </div>
       <hr class="categoria">
-      <p class="display-1 titulo_categoria">OFERTAS</p>
+      <p class="display-1 titulo_categoria"> <i class="bi bi-cash-coin"></i> OFERTAS</p>
       <hr class="categoria">
 
       <div class="card-group">
         <div class="card">
-          <a class="navbar-brand" href="calcas_masculinas.html"><img src="img/1730458750_1.webp" style="width: 100%; height: 30ren;"></a>
-          
+          <a class="navbar-brand" href="calcas_masculinas.html"><img src="img/1730458750_1.webp"
+              style="width: 100%; height: 30ren;"></a>
+
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -111,7 +117,8 @@
           </div>
         </div>
         <div class="card">
-          <a class="navbar-brand" href="ofertas.html"><img src="img/1730459185_2.webp" style="width: 100%; height: 30ren;"></a>
+          <a class="navbar-brand" href="ofertas.html"><img src="img/1730459185_2.webp"
+              style="width: 100%; height: 30ren;"></a>
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -119,7 +126,8 @@
           </div>
         </div>
         <div class="card">
-          <a class="navbar-brand" href="camisetas_masc.html"><img src="img/1730458911_3.webp" style="width: 100%; height: 30ren;"></a>
+          <a class="navbar-brand" href="camisetas_masc.html"><img src="img/1730458911_3.webp"
+              style="width: 100%; height: 30ren;"></a>
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
@@ -130,13 +138,13 @@
       <div class="row">
         <div class="col">
           <hr class="categoria">
-          <p class="display-1 titulo_categoria">Lançamentos</p>
+          <p class="display-1 titulo_categoria"><i class="bi bi-basket2"></i> Lançamentos</p>
           <hr class="categoria">
           <div class="card-group">
             <div class="card">
-              <img
-                src="img/kit_2_bermudas_cargo_masculina_escolha_as_cores_1357_1_967d7c0cd7c7d81b45d6a5e6ec43f2f4.webp"
-                class="card-img-top" alt="...">
+              <a class="navbar-brand" href="ofertas.html"><img
+                  src="img/kit_2_bermudas_cargo_masculina_escolha_as_cores_1357_1_967d7c0cd7c7d81b45d6a5e6ec43f2f4.webp"
+                  style="width: 100%; height: 30ren;"></a>
               <div class="card-body">
                 <h5 class="card-title">Kit 2 Bermudas Cargo Masculina - (ESCOLHA AS CORES)</h5>
                 <p class="card-text"></p>
@@ -144,9 +152,9 @@
               </div>
             </div>
             <div class="card">
-              <img
-                src="img/kit_2_calcas_cargo_masculina_sem_punho_escolha_as_cores_1793_1_82b11e478bec9c3d9963adea7c5b9a82.webp"
-                class="card-img-top" alt="...">
+              <a class="navbar-brand" href="ofertas.html"><img
+                  src="img/kit_2_calcas_cargo_masculina_sem_punho_escolha_as_cores_1793_1_82b11e478bec9c3d9963adea7c5b9a82.webp"
+                  style="width: 100%; height: 30ren;"></a>
               <div class="card-body">
                 <h5 class="card-title">Kit 2 Calças Cargo Masculina Sem Punho - (ESCOLHA AS CORES)</h5>
                 <p class="card-text"></p>
@@ -154,8 +162,9 @@
               </div>
             </div>
             <div class="card">
-              <img src="img/kit_2_shorts_curto_masculino_escolha_as_cores_1651_1_267fa87dacc22899b584b5ca2a352b2e.webp"
-                class="card-img-top" alt="...">
+              <a class="navbar-brand" href="ofertas.html"><img
+                src="img/kit_2_shorts_curto_masculino_escolha_as_cores_1651_1_267fa87dacc22899b584b5ca2a352b2e.webp"
+                style="width: 100%; height: 30ren;"></a>
               <div class="card-body">
                 <h5 class="card-title">Kit 2 Shorts Curto Masculino - (ESCOLHA AS CORES)</h5>
                 <p class="card-text"></p>
